--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@itdogtor/antiage-ui-kit",
+  "name": "@ITDOGTOR/antiage-ui-kit",
   "version": "0.0.1",
   "description": "A react component library Anti-Age",
   "scripts": {
