change library publish method and add optimization

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@itdogtor/antiage-ui-kit",
+  "name": "antiage-ui-kit",
   "version": "0.0.1",
   "description": "A react component library Anti-Age",
   "scripts": {
@@ -13,12 +13,16 @@
     "@rollup/plugin-typescript": "^8.3.4",
     "@types/react": "^18.0.15",
     "postcss": "^8.4.14",
-    "react": "^18.2.0",
     "rollup": "^2.77.2",
     "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
+  },
+  "peerDependencies": {
+    "react": "*16.0.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -26,7 +30,8 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/ITDOGTOR"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ITDOGTOR/antiage-ui-kit.git"
   }
 }
