--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.15",
+    "autoprefixer": "^10.4.8",
     "babel-jest": "^28.1.3",
+    "cssnano": "^5.1.13",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
