--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antiage-ui-kit",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "A react component library Anti-Age",
   "scripts": {
     "rollup": "rollup -c",
@@ -19,16 +19,17 @@
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.15",
-    "autoprefixer": "^10.4.8",
     "babel-jest": "^28.1.3",
-    "cssnano": "^5.1.13",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "postcss": "^8.4.14",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^2.77.2",
+    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
