--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"build": "rollup -c",
 		"test": "jest",
-		"size": "size-limit"
+		"size": "size-limit",
+		"lint": "eslint src --ext .ts,.tsx"
 	},
 	"author": "IT_DOGTOR",
 	"license": "ISC",
@@ -21,7 +22,19 @@
 		"@testing-library/react": "^13.3.0",
 		"@types/jest": "^28.1.6",
 		"@types/react": "^18.0.15",
+		"@typescript-eslint/eslint-plugin": "^5.33.1",
+		"@typescript-eslint/parser": "^5.33.1",
 		"babel-jest": "^28.1.3",
+		"eslint": "^8.22.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-airbnb-typescript": "^17.0.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.6.1",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react": "^7.30.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^28.1.3",
 		"jest-environment-jsdom": "^28.1.3",
