--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"build": "rollup -c",
 		"test": "jest",
 		"size": "size-limit",
-		"lint": "eslint src --ext .ts,.tsx"
+		"lint": "eslint \"src\" --fix --ext .ts,.tsx",
+		"stylelint": "stylelint \"src/**/*.css\" --fix"
 	},
 	"author": "IT_DOGTOR",
 	"license": "ISC",
@@ -51,6 +52,13 @@
 		"rollup-plugin-postcss": "^4.0.2",
 		"rollup-plugin-terser": "^7.0.2",
 		"size-limit": "^8.0.1",
+		"stylelint": "^14.10.0",
+		"stylelint-config-css-modules": "^4.1.0",
+		"stylelint-config-prettier": "^9.0.3",
+		"stylelint-config-rational-order": "^0.1.2",
+		"stylelint-config-recommended": "^9.0.0",
+		"stylelint-order": "^5.0.0",
+		"stylelint-prettier": "^2.0.0",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4"
 	},
