--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 		"lint": "eslint \"src\" --fix --ext .ts,.tsx",
 		"stylelint": "stylelint \"src/**/*.css\" --fix"
 	},
+	"lint-staged": {
+		"*.css": "stylelint --fix",
+		"*.{js,jsx,ts,tsx}": "eslint --fix"
+	},
 	"author": "IT_DOGTOR",
 	"license": "ISC",
 	"devDependencies": {
@@ -36,9 +40,11 @@
 		"eslint-plugin-react": "^7.30.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"husky": "^8.0.0",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^28.1.3",
 		"jest-environment-jsdom": "^28.1.3",
+		"lint-staged": "^13.0.3",
 		"postcss": "^8.4.14",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-preset-env": "^7.7.2",
