--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "antiage-ui-kit",
-	"version": "0.0.4",
+	"version": "0.0.0-development",
 	"description": "A react component library Anti-Age",
 	"scripts": {
 		"build": "rollup -c",
 		"test": "jest",
 		"size": "size-limit",
 		"lint": "eslint \"src\" --fix --ext .ts,.tsx",
-		"stylelint": "stylelint \"src/**/*.css\" --fix"
+		"stylelint": "stylelint \"src/**/*.css\" --fix",
+		"semantic-release": "semantic-release"
 	},
 	"lint-staged": {
 		"*.css": "stylelint --fix",
@@ -57,6 +58,7 @@
 		"rollup-plugin-peer-deps-external": "^2.2.4",
 		"rollup-plugin-postcss": "^4.0.2",
 		"rollup-plugin-terser": "^7.0.2",
+		"semantic-release": "^19.0.3",
 		"size-limit": "^8.0.1",
 		"stylelint": "^14.10.0",
 		"stylelint-config-css-modules": "^4.1.0",
@@ -75,7 +77,8 @@
 	"main": "dist/cjs/index.js",
 	"module": "dist/esm/index.js",
 	"files": [
-		"dist"
+		"dist",
+		"src"
 	],
 	"types": "dist/index.d.ts",
 	"repository": {
@@ -94,5 +97,8 @@
 	],
 	"engines": {
 		"node": ">=14"
+	},
+	"publishConfig": {
+		"access": "restricted"
 	}
 }
