--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,39 @@
 {
+	"include": [
+		"src",
+		"types"
+	],
 	"compilerOptions": {
-		"target": "es2016",
-		"jsx": "react",
 		"module": "ESNext",
-		"moduleResolution": "node",
+		"target": "ES5",
+		"moduleResolution": "Node",
+		"jsx": "react",
+		"allowJs": false,
+		"checkJs": false,
+		"strict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"exactOptionalPropertyTypes": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUncheckedIndexedAccess": true,
+		"noImplicitOverride": true,
+		"noPropertyAccessFromIndexSignature": true,
+		"allowUnreachableCode": false,
+		"allowUnusedLabels": false,
+		"skipLibCheck": true,
+		"allowSyntheticDefaultImports": true,
+		"isolatedModules": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
 		"declaration": true,
 		"emitDeclarationOnly": true,
 		"sourceMap": true,
 		"outDir": "dist",
-		"declarationDir": "types",
-		"allowSyntheticDefaultImports": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"strict": true,
-		"skipLibCheck": true
-	},
+		"noEmit": true,
+		"newLine": "lf",
+		"importHelpers": true,
+		"rootDir": "./src"
+	}
 }
