--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"size": "size-limit",
 		"lint": "eslint \"src\" --fix --ext .ts,.tsx",
 		"stylelint": "stylelint \"src/**/*.css\" --fix",
-		"semantic-release": "semantic-release"
+		"semantic-release": "semantic-release",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
 	},
 	"lint-staged": {
 		"*.css": "stylelint --fix",
@@ -25,12 +27,22 @@
 		"@rollup/plugin-node-resolve": "^13.3.0",
 		"@rollup/plugin-typescript": "^8.3.4",
 		"@size-limit/preset-small-lib": "^8.0.1",
+		"@storybook/addon-actions": "^6.5.10",
+		"@storybook/addon-essentials": "^6.5.10",
+		"@storybook/addon-interactions": "^6.5.10",
+		"@storybook/addon-links": "^6.5.10",
+		"@storybook/builder-webpack5": "^6.5.10",
+		"@storybook/manager-webpack5": "^6.5.10",
+		"@storybook/react": "^6.5.10",
+		"@storybook/testing-library": "^0.0.13",
+		"@stylelint/postcss-css-in-js": "^0.38.0",
 		"@testing-library/react": "^13.3.0",
 		"@types/jest": "^28.1.6",
 		"@types/react": "^18.0.15",
 		"@typescript-eslint/eslint-plugin": "^5.33.1",
 		"@typescript-eslint/parser": "^5.33.1",
 		"babel-jest": "^28.1.3",
+		"babel-loader": "^8.2.5",
 		"eslint": "^8.22.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.0.0",
@@ -41,6 +53,7 @@
 		"eslint-plugin-react": "^7.30.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"eslint-plugin-storybook": "^0.6.4",
 		"husky": "^8.0.0",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^28.1.3",
@@ -49,6 +62,7 @@
 		"postcss": "^8.4.14",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-preset-env": "^7.7.2",
+		"postcss-syntax": "^0.36.2",
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
