--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
 	"name": "antiage-ui-kit",
 	"version": "0.0.0-development",
 	"description": "A react component library Anti-Age",
+	"main": "dist/index.js",
+	"module": "dist/index.esm.js",
+	"files": [
+		"dist"
+	],
+	"types": "dist/index.d.ts",
 	"scripts": {
 		"build": "rollup -c",
 		"test": "jest",
@@ -25,7 +31,6 @@
 		"@babel/preset-typescript": "^7.18.6",
 		"@rollup/plugin-commonjs": "^22.0.1",
 		"@rollup/plugin-node-resolve": "^13.3.0",
-		"@rollup/plugin-typescript": "^8.3.4",
 		"@size-limit/preset-small-lib": "^8.0.1",
 		"@storybook/addon-actions": "^6.5.10",
 		"@storybook/addon-essentials": "^6.5.10",
@@ -38,7 +43,8 @@
 		"@stylelint/postcss-css-in-js": "^0.38.0",
 		"@testing-library/react": "^13.3.0",
 		"@types/jest": "^28.1.6",
-		"@types/react": "^18.0.15",
+		"@types/react": "^18.0.17",
+		"@types/react-dom": "^18.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.33.1",
 		"@typescript-eslint/parser": "^5.33.1",
 		"babel-jest": "^28.1.3",
@@ -59,19 +65,15 @@
 		"jest": "^28.1.3",
 		"jest-environment-jsdom": "^28.1.3",
 		"lint-staged": "^13.0.3",
-		"postcss": "^8.4.14",
-		"postcss-flexbugs-fixes": "^5.0.2",
-		"postcss-preset-env": "^7.7.2",
-		"postcss-syntax": "^0.36.2",
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"rollup": "^2.77.2",
 		"rollup-plugin-analyzer": "^4.0.0",
-		"rollup-plugin-dts": "^4.2.2",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
 		"rollup-plugin-postcss": "^4.0.2",
 		"rollup-plugin-terser": "^7.0.2",
+		"rollup-plugin-typescript2": "^0.32.1",
 		"semantic-release": "^19.0.3",
 		"size-limit": "^8.0.1",
 		"stylelint": "^14.10.0",
@@ -81,20 +83,13 @@
 		"stylelint-config-recommended": "^9.0.0",
 		"stylelint-order": "^5.0.0",
 		"stylelint-prettier": "^2.0.0",
-		"tslib": "^2.4.0",
-		"typescript": "^4.7.4"
+		"typescript": "^4.7.4",
+		"typescript-plugin-css-modules": "^3.4.0"
 	},
 	"peerDependencies": {
 		"react": ">=16.0.0",
 		"react-dom": ">=16.0.0"
 	},
-	"main": "dist/cjs/index.js",
-	"module": "dist/esm/index.js",
-	"files": [
-		"dist",
-		"src"
-	],
-	"types": "dist/index.d.ts",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/ITDOGTOR/antiage-ui-kit.git"
