--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,26 @@
 {
-	"include": [
-		"src",
-		"types",
-		"*.js",
-		".eslintrc.js"
-	],
 	"compilerOptions": {
-		"module": "ESNext",
-		"target": "ES5",
-		"moduleResolution": "Node",
-		"jsx": "react",
-		"allowJs": false,
-		"checkJs": false,
-		"strict": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"exactOptionalPropertyTypes": true,
-		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true,
-		"noUncheckedIndexedAccess": true,
-		"noImplicitOverride": true,
-		"noPropertyAccessFromIndexSignature": true,
-		"allowUnreachableCode": false,
-		"allowUnusedLabels": false,
-		"skipLibCheck": true,
-		"allowSyntheticDefaultImports": true,
-		"isolatedModules": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
+		"rootDir": "src",
 		"declaration": true,
-		"emitDeclarationOnly": true,
+		"declarationDir": "dist",
+		"module": "esnext",
+		"target": "es5",
+		"lib": ["es6", "dom", "es2016", "es2017"],
 		"sourceMap": true,
-		"outDir": "dist",
-		"noEmit": true,
-		"newLine": "lf",
-		"importHelpers": true,
-		"rootDir": "./src"
-	}
+		"jsx": "react",
+		"moduleResolution": "node",
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"strict": true,
+		"plugins": [{"name": "typescript-plugin-css-modules"}]
+	},
+	"include": ["."],
+	"exclude": [
+		"node_modules",
+		"dist",
+		"storybook-static",
+		"src/**/*.stories.tsx",
+		"src/**/*.test.tsx"
+	]
 }
+
