--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
 		"stylelint-order": "^5.0.0",
 		"stylelint-prettier": "^2.0.0",
 		"typescript": "^4.7.4",
-		"typescript-plugin-css-modules": "^3.4.0"
+		"typescript-plugin-css-modules": "^3.4.0",
+		"webpack": "^5.74.0"
 	},
 	"peerDependencies": {
 		"react": ">=16.0.0",
@@ -108,6 +109,6 @@
 		"node": ">=14"
 	},
 	"publishConfig": {
-		"access": "restricted"
+		"access": "public"
 	}
 }
