--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"build": "rollup -c",
 		"test": "jest",
 		"size": "size-limit",
-		"lint": "eslint \"src\" --fix --ext .ts,.tsx",
+		"lint": "eslint . --fix --ext .ts,.tsx",
 		"stylelint": "stylelint \"src/**/*.css\" --fix",
 		"semantic-release": "semantic-release",
 		"storybook": "start-storybook -p 6006",
@@ -51,6 +51,7 @@
 		"@typescript-eslint/parser": "^5.33.1",
 		"babel-jest": "^28.1.3",
 		"babel-loader": "^8.2.5",
+		"classnames": "^2.3.1",
 		"eslint": "^8.22.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.0.0",
