--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"react-dom": "^18.2.0",
 		"rollup": "^2.77.2",
 		"rollup-plugin-analyzer": "^4.0.0",
+		"rollup-plugin-copy": "^3.4.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
 		"rollup-plugin-postcss": "^4.0.2",
 		"rollup-plugin-terser": "^7.0.2",
