--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
 		"dist",
 		"storybook-static",
 		"src/**/*.stories.tsx",
-		"src/**/*.test.tsx"
+		"src/**/*.test.tsx",
+		"jest.setup.ts"
 	]
 }
 
