--- a/package.json
+++ b/package.json
@@ -39,14 +39,16 @@
 		"@storybook/addon-essentials": "^6.5.10",
 		"@storybook/addon-interactions": "^6.5.10",
 		"@storybook/addon-links": "^6.5.10",
+		"@storybook/addon-viewport": "^6.5.10",
+		"@storybook/addons": "^6.5.10",
 		"@storybook/builder-webpack5": "^6.5.10",
 		"@storybook/manager-webpack5": "^6.5.10",
 		"@storybook/react": "^6.5.10",
 		"@storybook/testing-library": "^0.0.13",
+		"@storybook/theming": "^6.5.10",
 		"@stylelint/postcss-css-in-js": "^0.38.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.3.0",
-		"colors": "^1.4.0",
 		"@types/jest": "^28.1.6",
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
@@ -55,6 +57,7 @@
 		"babel-jest": "^28.1.3",
 		"babel-loader": "^8.2.5",
 		"classnames": "^2.3.1",
+		"colors": "^1.4.0",
 		"eslint": "^8.22.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.0.0",
