--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@typescript-eslint/parser": "^5.33.1",
 		"babel-jest": "^28.1.3",
 		"babel-loader": "^8.2.5",
+		"classnames": "^2.3.1",
 		"colors": "^1.4.0",
 		"eslint": "^8.22.0",
 		"eslint-config-airbnb": "^19.0.4",
