--- a/package.json
+++ b/package.json
@@ -29,71 +29,72 @@
 	"author": "IT_DOGTOR",
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/core": "^7.18.10",
-		"@babel/preset-env": "^7.18.10",
+		"@babel/core": "^7.19.3",
+		"@babel/preset-env": "^7.19.3",
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.18.6",
-		"@rollup/plugin-commonjs": "^22.0.1",
-		"@rollup/plugin-node-resolve": "^13.3.0",
-		"@size-limit/preset-small-lib": "^8.0.1",
-		"@storybook/addon-actions": "^6.5.10",
-		"@storybook/addon-essentials": "^6.5.10",
-		"@storybook/addon-links": "^6.5.10",
-		"@storybook/addon-viewport": "^6.5.10",
-		"@storybook/addons": "^6.5.10",
-		"@storybook/builder-webpack5": "^6.5.10",
-		"@storybook/manager-webpack5": "^6.5.10",
-		"@storybook/react": "^6.5.10",
-		"@storybook/testing-library": "^0.0.13",
-		"@storybook/theming": "^6.5.10",
+		"@rollup/plugin-commonjs": "^22.0.2",
+		"@rollup/plugin-node-resolve": "^14.1.0",
+		"@size-limit/preset-small-lib": "^8.1.0",
+		"@storybook/addon-actions": "^6.5.12",
+		"@storybook/addon-essentials": "^6.5.12",
+		"@storybook/addon-links": "^6.5.12",
+		"@storybook/addon-viewport": "^6.5.12",
+		"@storybook/addons": "^6.5.12",
+		"@storybook/builder-webpack5": "^6.5.12",
+		"@storybook/manager-webpack5": "^6.5.12",
+		"@storybook/react": "^6.5.12",
+		"@storybook/theming": "^6.5.12",
 		"@stylelint/postcss-css-in-js": "^0.38.0",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.3.0",
-		"@types/jest": "^28.1.6",
-		"@types/react": "^18.0.17",
+		"@testing-library/jest-dom": "5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "14.4.3",
+		"@types/jest": "^29.1.1",
+		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
-		"@typescript-eslint/eslint-plugin": "^5.33.1",
-		"@typescript-eslint/parser": "^5.33.1",
-		"babel-jest": "^28.1.3",
+		"@typescript-eslint/eslint-plugin": "^5.38.1",
+		"@typescript-eslint/parser": "^5.38.1",
+		"babel-jest": "^29.1.2",
 		"babel-loader": "^8.2.5",
-		"classnames": "^2.3.1",
+		"classnames": "^2.3.2",
 		"colors": "^1.4.0",
-		"eslint": "^8.22.0",
+		"eslint": "^8.24.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.0.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jsx-a11y": "^6.6.1",
 		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-react": "^7.30.1",
+		"eslint-plugin-react": "^7.31.8",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"eslint-plugin-simple-import-sort": "^8.0.0",
 		"eslint-plugin-storybook": "^0.6.4",
-		"husky": "^8.0.0",
+		"husky": "^8.0.1",
 		"identity-obj-proxy": "^3.0.0",
-		"jest": "^28.1.3",
-		"jest-environment-jsdom": "^28.1.3",
+		"jest": "^29.1.2",
+		"jest-environment-jsdom": "29.1.2",
+		"jest-watch-typeahead": "^2.2.0",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"rollup": "^2.77.2",
+		"rollup": "^2.79.1",
 		"rollup-plugin-analyzer": "^4.0.0",
 		"rollup-plugin-copy": "^3.4.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
 		"rollup-plugin-postcss": "^4.0.2",
 		"rollup-plugin-terser": "^7.0.2",
-		"rollup-plugin-typescript2": "^0.32.1",
-		"semantic-release": "^19.0.3",
-		"size-limit": "^8.0.1",
-		"stylelint": "^14.10.0",
+		"rollup-plugin-typescript2": "^0.34.0",
+		"semantic-release": "^19.0.5",
+		"size-limit": "^8.1.0",
+		"stylelint": "^14.13.0",
 		"stylelint-config-css-modules": "^4.1.0",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-rational-order": "^0.1.2",
 		"stylelint-config-recommended": "^9.0.0",
 		"stylelint-order": "^5.0.0",
 		"stylelint-prettier": "^2.0.0",
-		"typescript": "^4.7.4",
+		"typescript": "^4.8.4",
 		"typescript-plugin-css-modules": "^3.4.0",
 		"webpack": "^5.74.0"
 	},
