fix: remove all tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 		"storybook-static",
 		"src/**/*.stories.tsx",
 		"src/**/*.test.tsx",
-		"jest.setup.ts",
+		"setupTests.ts",
 		"src/constants.tsx"
 	]
 }
