--- a/package.json
+++ b/package.json
@@ -36,24 +36,25 @@
 		"@rollup/plugin-commonjs": "^22.0.2",
 		"@rollup/plugin-node-resolve": "^14.1.0",
 		"@size-limit/preset-small-lib": "^8.1.0",
-		"@storybook/addon-actions": "^6.5.12",
-		"@storybook/addon-essentials": "^6.5.12",
-		"@storybook/addon-links": "^6.5.12",
-		"@storybook/addon-viewport": "^6.5.12",
-		"@storybook/addons": "^6.5.12",
-		"@storybook/builder-webpack5": "^6.5.12",
-		"@storybook/manager-webpack5": "^6.5.12",
-		"@storybook/react": "^6.5.12",
-		"@storybook/theming": "^6.5.12",
+		"@storybook/addon-actions": "^6.5.10",
+		"@storybook/addon-essentials": "^6.5.10",
+		"@storybook/addon-links": "^6.5.10",
+		"@storybook/addon-viewport": "^6.5.10",
+		"@storybook/addons": "^6.5.10",
+		"@storybook/builder-webpack5": "^6.5.10",
+		"@storybook/manager-webpack5": "^6.5.10",
+		"@storybook/react": "^6.5.10",
+		"@storybook/theming": "^6.5.10",
 		"@stylelint/postcss-css-in-js": "^0.38.0",
-		"@testing-library/jest-dom": "5.16.5",
+		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "14.4.3",
+		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.1.1",
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.38.1",
 		"@typescript-eslint/parser": "^5.38.1",
+		"antd": "^4.23.4",
 		"babel-jest": "^29.1.2",
 		"babel-loader": "^8.2.5",
 		"classnames": "^2.3.2",
@@ -72,7 +73,7 @@
 		"husky": "^8.0.1",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.1.2",
-		"jest-environment-jsdom": "29.1.2",
+		"jest-environment-jsdom": "^29.1.2",
 		"jest-watch-typeahead": "^2.2.0",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
@@ -100,7 +101,8 @@
 	},
 	"peerDependencies": {
 		"react": ">=16",
-		"classnames": ">=2"
+		"classnames": ">=2",
+		"antd": ">=4"
 	},
 	"repository": {
 		"type": "git",
