--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"babel-loader": "^8.2.5",
 		"classnames": "^2.3.2",
 		"colors": "^1.4.0",
+		"core-js": "^3.25.5",
 		"eslint": "^8.24.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.0.0",
