--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.4.1",
 		"rollup": "^2.79.1",
 		"rollup-plugin-analyzer": "^4.0.0",
 		"rollup-plugin-copy": "^3.4.0",
@@ -89,6 +90,7 @@
 		"rollup-plugin-typescript2": "^0.34.0",
 		"semantic-release": "^19.0.5",
 		"size-limit": "^8.1.0",
+		"storybook-addon-react-router-v6": "^0.2.1",
 		"stylelint": "^14.13.0",
 		"stylelint-config-css-modules": "^4.1.0",
 		"stylelint-config-prettier": "^9.0.3",
@@ -103,7 +105,8 @@
 	"peerDependencies": {
 		"react": ">=16",
 		"classnames": ">=2",
-		"antd": ">=4"
+		"antd": ">=4",
+		"react-router-dom": ">=5"
 	},
 	"repository": {
 		"type": "git",
