--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-phone-input-2": "^2.15.1",
 		"react-router-dom": "^6.4.1",
 		"rollup": "^2.79.1",
 		"rollup-plugin-analyzer": "^4.0.0",
@@ -106,7 +107,8 @@
 		"react": ">=16",
 		"classnames": ">=2",
 		"antd": ">=4",
-		"react-router-dom": ">=5"
+		"react-router-dom": ">=5",
+		"react-phone-input-2": ">=2"
 	},
 	"repository": {
 		"type": "git",
