--- a/package.json
+++ b/package.json
@@ -104,11 +104,11 @@
 		"webpack": "^5.74.0"
 	},
 	"peerDependencies": {
-		"react": ">=16",
-		"classnames": ">=2",
 		"antd": ">=4",
-		"react-router-dom": ">=5",
-		"react-phone-input-2": ">=2"
+		"classnames": ">=2",
+		"react": ">=16",
+		"react-phone-input-2": ">=2",
+		"react-router-dom": ">=5"
 	},
 	"repository": {
 		"type": "git",
@@ -126,5 +126,8 @@
 	],
 	"engines": {
 		"node": ">=10"
+	},
+	"dependencies": {
+		"react-select": "^5.7.1"
 	}
 }
