--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
+      - name: Clear npm cache
+        run: npm cache clean --force
+
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
 
