--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Clear npm cache
+        run: npm cache clean --force
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
