--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -11,6 +11,9 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Clear npm cache
+        run: npm cache clean --force
+
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
 
