--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: ['14.x', '16.x']
+        node: ['16.x']
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -18,9 +18,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
-
-      - name: Clear npm cache
-        run: npm cache clean --force
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
