--- a/package.json
+++ b/package.json
@@ -109,7 +109,8 @@
 		"classnames": ">=2",
 		"react": ">=16",
 		"react-phone-input-2": ">=2",
-		"react-router-dom": ">=5"
+		"react-router-dom": ">=5",
+		"react-select": ">=4"
 	},
 	"repository": {
 		"type": "git",
@@ -127,8 +128,5 @@
 	],
 	"engines": {
 		"node": ">=10"
-	},
-	"dependencies": {
-		"react-select": "^5.7.1"
 	}
 }
