--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"react-dom": "^18.2.0",
 		"react-phone-input-2": "^2.15.1",
 		"react-router-dom": "^6.4.1",
+		"react-select": "^5.7.2",
 		"rollup": "^2.79.1",
 		"rollup-plugin-analyzer": "^4.0.0",
 		"rollup-plugin-import-css": "^3.0.3",
