--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.1.1",
 		"@types/lodash.debounce": "^4.0.7",
+		"@types/lodash.range": "^3.2.7",
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.38.1",
@@ -81,6 +82,7 @@
 		"jest-watch-typeahead": "^2.2.0",
 		"lint-staged": "^13.0.3",
 		"lodash.debounce": "^4.0.8",
+		"lodash.range": "^3.2.0",
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
