refactor: fix error npm install

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
         with:
+          install-command: npm install --force
           useLockFile: false
 
       - name: Build
