--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,38 @@
 {
 	"compilerOptions": {
-		"rootDir": "src",
+		"target": "ES2020",
+		"lib": ["dom", "ES2015", "ESNext"],
+		"skipLibCheck": true,
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"noFallthroughCasesInSwitch": true,
+		"module": "ESNext",
+		"moduleResolution": "Node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"skipDefaultLibCheck": true,
+		"jsx": "react-jsx",
+		"allowUnusedLabels": true,
 		"declaration": true,
 		"declarationDir": "dist",
-		"module": "esnext",
-		"target": "es5",
-		"lib": ["es6", "dom", "es2016", "es2017"],
-		"sourceMap": true,
-		"jsx": "react",
-		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true,
-		"esModuleInterop": true,
-		"strict": true,
-		"plugins": [{"name": "typescript-plugin-css-modules"}]
+		"declarationMap": true,
+		"baseUrl": "./src",
+		"paths": {
+			"types/*": ["types/*"],
+			"helpers/*": ["helpers/*"],
+			"assets/*": ["assets/*"]
+		}
 	},
-	"include": ["."],
+	"include": ["src/**/*"],
 	"exclude": [
 		"node_modules",
-		"dist",
-		"storybook-static",
-		"src/**/*.stories.tsx",
-		"src/**/*.test.tsx",
-		"setupTests.ts",
+		"**/node_modules/*",
+		"*.stories.tsx",
+		"**/*.stories.tsx",
+		"*.stories.ts",
+		"**/__stories__/*",
+		"__stories__"
 	]
 }
-
