--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"commitlint": "commitlint --edit",
 		"test": "jest --coverage",
 		"size": "size-limit",
-		"lint": "eslint . --fix --ext .ts,.tsx",
+		"eslint": "eslint src/ --fix",
 		"stylelint": "stylelint \"src/**/*.css\" --fix",
 		"semantic-release": "semantic-release",
 		"storybook": "start-storybook -p 6006",
@@ -61,8 +61,8 @@
 		"@types/lodash.range": "^3.2.7",
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
-		"@typescript-eslint/eslint-plugin": "^5.38.1",
-		"@typescript-eslint/parser": "^5.38.1",
+		"@typescript-eslint/eslint-plugin": "^6.11.0",
+		"@typescript-eslint/parser": "^6.11.0",
 		"antd": "^4.23.4",
 		"babel-jest": "^29.1.2",
 		"babel-loader": "^8.2.5",
@@ -71,17 +71,18 @@
 		"commitizen": "^4.3.0",
 		"core-js": "^3.25.5",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^8.24.0",
+		"eslint": "^8.53.0",
 		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-airbnb-typescript": "^17.0.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsx-a11y": "^6.6.1",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-react": "^7.31.8",
+		"eslint-config-airbnb-typescript": "^17.1.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-jest": "^27.6.0",
+		"eslint-plugin-jsx-a11y": "^6.8.0",
+		"eslint-plugin-prettier": "^5.0.1",
+		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-simple-import-sort": "^8.0.0",
-		"eslint-plugin-storybook": "^0.6.4",
+		"eslint-plugin-simple-import-sort": "^10.0.0",
+		"eslint-plugin-storybook": "^0.6.15",
 		"husky": "^8.0.1",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.1.2",
