chore: update version storybook and storybook addons

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 		"eslint": "eslint src/ --fix",
 		"stylelint": "stylelint \"src/**/*.css\" --fix",
 		"semantic-release": "semantic-release",
-		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
 		"generate": "node ./utils/create-component",
 		"svgr": "npx @svgr/cli --template \"utils/templates/svg.js\" --index-template \"utils/templates/index-svg.js\" --svgo-config svgo.config.js --out-dir \"src/assets\" --ignore-existing --typescript -- \"src/assets\" && node utils/remove-svgs.js"
 	},
@@ -41,15 +41,13 @@
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@rollup/plugin-terser": "^0.4.4",
 		"@size-limit/preset-small-lib": "^8.1.0",
-		"@storybook/addon-actions": "^6.5.10",
-		"@storybook/addon-essentials": "^6.5.10",
-		"@storybook/addon-links": "^6.5.10",
-		"@storybook/addon-viewport": "^6.5.10",
-		"@storybook/addons": "^6.5.10",
-		"@storybook/builder-webpack5": "^6.5.10",
-		"@storybook/manager-webpack5": "^6.5.10",
-		"@storybook/react": "^6.5.10",
-		"@storybook/theming": "^6.5.10",
+		"@storybook/addon-essentials": "^7.5.3",
+		"@storybook/addon-links": "^7.5.3",
+		"@storybook/blocks": "^7.5.3",
+		"@storybook/manager-api": "^7.5.3",
+		"@storybook/react": "^7.5.3",
+		"@storybook/react-vite": "^7.5.3",
+		"@storybook/theming": "^7.5.3",
 		"@svgr/cli": "^6.5.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
@@ -103,14 +101,14 @@
 		"rollup-plugin-typescript2": "^0.36.0",
 		"semantic-release": "^22.0.7",
 		"size-limit": "^11.0.0",
-		"storybook-addon-react-router-v6": "^0.2.1",
+		"storybook": "^7.5.3",
+		"storybook-addon-react-router-v6": "^2.0.10",
 		"stylelint": "^15.11.0",
 		"stylelint-config-clean-order": "^5.2.0",
 		"stylelint-config-css-modules": "^4.3.0",
 		"stylelint-config-standard": "^34.0.0",
 		"stylelint-prettier": "^4.0.2",
-		"typescript": "^5.2.2",
-		"webpack": "^5.74.0"
+		"typescript": "^5.2.2"
 	},
 	"peerDependencies": {
 		"antd": ">=4",
