chore: fix command for main workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm run stylelint
 
       - name: Lint
-        run: npm run lint
+        run: npm run eslint
 
       - name: Test
         run: npm run test --ci --coverage --maxWorkers=2
