chore: add postcss

--- a/package.json
+++ b/package.json
@@ -85,6 +85,9 @@
 		"lint-staged": "^15.1.0",
 		"lodash.debounce": "^4.0.8",
 		"lodash.range": "^3.2.0",
+		"postcss": "^8.4.31",
+		"postcss-nested": "^6.0.1",
+		"postcss-preset-env": "^9.3.0",
 		"prettier": "^3.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -93,8 +96,8 @@
 		"react-select": "^5.7.2",
 		"rollup": "^4.4.1",
 		"rollup-plugin-analyzer": "^4.0.0",
-		"rollup-plugin-import-css": "^3.3.5",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
+		"rollup-plugin-postcss": "^4.0.2",
 		"rollup-plugin-typescript2": "^0.36.0",
 		"semantic-release": "^22.0.7",
 		"size-limit": "^11.0.0",
